--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,8 @@ long_description_content_type = text/markdown
 url = https://github.com/pachterlab/monod
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
-    Operating System :: Linux
+    License :: OSI Approved :: BSD License
+    Operating System :: OS Independent
 
 [options]
 package_dir =
@@ -18,7 +18,6 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 install_requires =
-    pickle
     numpy
     scipy
     numdifftools
