Add sklearn and tqdm reqs update version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = monod
-version = 0.2.8.0
+version = 0.2.9.0
 author = Gennady Gorin, Lior Pachter
 author_email = ggorin@caltech.edu, lpachter@caltech.edu
 description = the Monod package fits CME models to sequencing data.
@@ -25,6 +25,8 @@ install_requires =
     anndata
     loompy
     matplotlib
+    scikit-learn
+    tqdm
 
 [options.packages.find]
 where = src
