qc function added to analysis

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = monod
+name = monod_anndata
 version = 0.2.9.0
 author = Gennady Gorin, Lior Pachter
 author_email = ggorin@caltech.edu, lpachter@caltech.edu
